<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/login_bg_gradient"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="400px"
        android:layout_height="400px"
        android:layout_marginBottom="50dp"
        android:background="@mipmap/cat_footprint"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <EditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_username" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password"
        android:layout_width="300dp"
        android:padding="5dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:inputType="textPassword"
            android:hint="@string/hint_password"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/state_pressed_btn"
        android:text="@string/btn_login"/>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/state_pressed_register"
        android:text="@string/btn_register" />
</LinearLayout>